# NTUT_OOPLab_Game

./: CMakeLists.txt  README.md  Sample_2024-03-22-005901.collapsed  TutorialStageText.txt
assets/images/psd files/: continue.psd  exit.psd  mission accomplished.psd  paused.psd  restart.psd  start.psd
assets/map/: temperat.yaml
assets/map/20/: map.yaml
assets/map/CIFSTE/: map.yaml
assets/map/europe/: ERCC2-sequences.yaml  ERCC21andBCC11-rules.yaml  bi-balance-rules.yaml  bi-briefing-rules.yaml  bi-lobby-rules.yaml  bi-sequences.yaml  map.yaml  ore.yaml
assets/map/green-belt/: map.yaml
assets/map/ore/: map.yaml
assets/map/ore-lord/: map.yaml
assets/map/terraint/: map.yaml
assets/map/test/: map.yaml
assets/shaders/: DrawLines.vert  Rectangle.vert  Triangle.vert
html/: md__r_e_a_d_m_e.html  pages.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  pages_0.js  searchdata.js
include/: App.hpp  Barracks.hpp  BatchRender.hpp  Camera.hpp  Capybara.hpp  Cat.hpp  Cell.hpp  Clickable.hpp  Cursor.hpp  DrawLines.hpp  DrawOverlays.hpp  FindValidPathToDest.hpp  GameObjectID.hpp  GameObjectManager.hpp  Giraffe.hpp  GiraffeText.hpp  Grid.hpp  House.hpp  Infantry.hpp  Line.hpp  Map.hpp  Player.hpp  Rectangle.hpp  Selectable.hpp  Settings.hpp  Sprite.hpp  SpriteSheet.hpp  Structure.hpp  Task.hpp  Terrain.hpp  Tile.hpp  Triangle.hpp  UI.hpp  UIScriptProcess.h  WayPoint.hpp  WayPointTool.h  World.hpp  button.hpp  config.hpp  pch.hpp
include/AI/: AI.hpp  AIGeneral.hpp  AIGroupCommander.hpp  AIPlayer.hpp  AIScript.hpp  AIScripts.hpp  Enemy.hpp  EnemyScripts.hpp
include/Avatar/: AttackAndDamage.hpp  AttackAndDamageUnit.hpp  Avatar.hpp  AvatarOrder.hpp  Hunter.hpp  Infantry.hpp  Moving.hpp  PathUtility.hpp  PathfindingUnit.hpp  Weapon.hpp
include/Component/: Component.hpp  Object.hpp
include/Core/: Context.hpp  Drawable.hpp  Shader.hpp  VertexArray.hpp  VertexBuffer.hpp
include/Display/: DrawOverlays.hpp  Image.hpp  ImageArray.hpp  MissingTexture.hpp  Sprite.hpp  SpriteSheet.hpp  SpriteSheetAnimation.hpp
include/Enemy/: Enemy.hpp  EnemyScripts.hpp
include/Map/: Map.hpp  MapBinReader.hpp  MapUtility.hpp  MapbinReader.hpp  TerrainConfig.hpp  Tile.hpp  YAMLReader.hpp
include/Mechanics/: AvatarManager.hpp  AvatarNavigator.hpp  BuiltStructure.hpp  Constructing.hpp  CursorSelection.hpp  FindValidPathToDest.hpp  GameObjectID.hpp  GameObjectManager.hpp  House.hpp  NemesisManager.hpp  Player.hpp  Spawning.hpp  StructureArray.hpp  StructureManager.hpp  UnitManager.hpp
include/Renderer/: BatchRender.hpp  Renderer.hpp
include/Scene/: DefaultScene.hpp  DemoScene.hpp  MapScene.hpp  MenuScene.hpp  SandBoxScene.hpp  Scene.hpp  SkirmishScene.hpp  TutorialScene.hpp
include/Structure/: AdvancePowerPlants.hpp  AdvencePowerPlants.hpp  Barracks.hpp  Buildings.hpp  HighLight.h  IWayPoint.hpp  IWayPointStructure.hpp  MousOverlapTool.h  MouseOverlapTool.h  OreRefinery.hpp  PowerPlants.hpp  SandBag.hpp  Structure.hpp  StructureOrder.hpp  WarFactory.hpp  WayPoint.hpp  WayPointStructure.hpp
include/UI/: Button.hpp  IngameUI.hpp  MenuUI.hpp  MissionAccomplishedUI.hpp  MissionFailed.hpp  PausedUI.hpp  UI.hpp  UIScriptProcess.h  UIScriptProcess.hpp  UIStatus.hpp  WonUI.hpp
include/Unit/: AttackAndDamageUnit.hpp  Avatar.hpp  Dummy.hpp  FindValidPathToDest.hpp  Health.hpp  Huntable.hpp  Hunter.hpp  IHealthable.hpp  IOrderable.hpp  Infantry.hpp  MoveDirection.hpp  Ore.hpp  PathUtility.hpp  PathfindingUnit.hpp  Runner.hpp  Selectable.hpp  Truck.hpp  WayPointUnit.hpp  Weapon.hpp
include/Util/: Animation.hpp  AssetStore.inl  BGM.hpp  CustomizableImage.hpp  GameObject.hpp  Image.hpp  ImageArray.hpp  Input.hpp  Prop.hpp  SFX.hpp  SpriteSheetAnimation.hpp  Text.hpp  TransformUtils.hpp
include/imgui/: imgui.h  imgui_internal.h  imstb_textedit.h  imstb_truetype.h
latex/: md__r_e_a_d_m_e.tex  refman.tex
src/: App.cpp  Barracks.cpp  BatchRender.cpp  Camera.cpp  Capybara.cpp  FindValidPathToDest.cpp  GameObjectID.cpp  Giraffe.cpp  Grid.cpp  Infantry.cpp  Rectangle.cpp  SpriteSheet.cpp  SpriteSheetAnimation.cpp  Structure.cpp  Triangle.cpp  UI.cpp  UIScriptProcess.cpp  WayPoint.cpp  WayPointTool.cpp  World.cpp  button.cpp  main.cpp
src/AI/: AI.cpp  AIGeneral.cpp  AIGroupCommander.cpp  AIScript.cpp  AIScripts.cpp  EnemyScripts.cpp
src/Avatar/: Avatar.cpp  Hunter.cpp  Moving.cpp  PathFindingUnit.cpp  PathUtility.cpp  Runner.cpp
src/Core/: Context.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Display/: Animation.cpp  CustomizableImage.cpp  Grid.cpp  ImageArray.cpp  MissingTexture.cpp  SpriteSheet.cpp  SpriteSheetAnimation.cpp
src/Enemy/: Enemy.cpp
src/Map/: Map.cpp  MapBinReader.cpp  TerrainConfig.cpp  Tile.cpp  YAMLReader.cpp
src/Mechanics/: AvatarManager.cpp  AvatarNavigator.cpp  BuiltStructure.cpp  CursorSelection.cpp  FindValidPathToDest.cpp  GameObjectID.cpp  GameObjectManager.cpp  NemesisManager.cpp  UnitManager.cpp
src/Renderer/: BatchRender.cpp
src/Scene/: DefaultScene.cpp  MapScene.cpp  SandBoxScene.cpp  Scene.cpp  SkirmishScene.cpp  TutorialScene.cpp
src/Structure/: Barracks.cpp  HighLight.cpp  IWayPointStructure.cpp  MousOverlapTool.cpp  MouseOverlapTool.cpp  OreRefinery.cpp  Structure.cpp  WarFactory.cpp  WayPoint.cpp  WayPointStructure.cpp  WayPointTool.cpp
src/UI/: IngameUI.cpp  UI.cpp  UIScriptProcess.cpp
src/Unit/: Avatar.cpp  PathFindingUnit.cpp  PathUtility.cpp  PathfindingUnit.cpp  Runner.cpp
src/Util/: CustomizableImage.cpp  GameObject.cpp  Image.cpp  ImageArray.cpp  Input.cpp  MissingTexture.cpp  Renderer.cpp  SFX.cpp  SpriteSheetAnimation.cpp  Text.cpp  TransformUtils.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdlrenderer2.cpp  imgui_tables.cpp  imgui_widgets.cpp
test/Interactive/: MouseSelectionTest.cpp
